--- a/BakkesModInjectorC++/BakkesModInjectorC++.vcxproj.filters
+++ b/BakkesModInjectorC++/BakkesModInjectorC++.vcxproj.filters
@@ -64,6 +64,9 @@
     <QtUic Include="BakkesModInjectorCpp.ui">
       <Filter>Form Files</Filter>
     </QtUic>
+    <QtUic Include="PluginManagerForm.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="BakkesModInjectorCpp.qrc">
